Sun, 23 Jul 2006 23:57:25 +0200 <thp@perli.net>
	* Patched data/gpodder.glade with patch from Alain Tauch
	* Added French comment to data/gpodder.desktop
	* Updated French translation (data/po/fr.po) from Alain Tauch

Thu, 20 Jul 2006 15:11:57 +0200 <thp@perli.net>
	* Starting integrating changes and fixes suggested by 
	  feedback on gPodder 0.7.9
	* Thanks to Haim Roitgrund (and his son :) for suggesting 
	  the "select all" features (see next three entries)
	* Added "download all" button that downloads not-already 
	  downloaded episodes from available podcast list
	* Added "cancel all" button that cancels all current 
	  running downloads to the downloads tab
	* Added "delete all" (cleanup) button to the downloaded 
	  podcast list - deletes all episodes in currently 
	  selected channel (and removes the empty channel)
	* Bumped version + date to a SVN devel version
	* Debugging variable set to "True" for the next few 
	  days now before the 0.8.0 release
	* Updated TODO list

Mon, 17 Jul 2006 17:02:15 +0200 <thp@perli.net>
	* Set update_on_startup in gPodderLib so gPodder doesn't 
	  crash for first-time users with no gPodder configuration
	* Updated German translation file + messages.pot
	* Version set to 0.7.9 - this is a testing version before 
	  the 0.8.0 release
	* References to 0.8 have been changed to 0.8.0 - gpodder 
	  will have a 3-digit version number beginning from now 
	  so we can put out smaller bugfix releases (0.8.1, etc..) 
	  between the bigger releases if needed
	* Debugging output disabled for this testing release. if 
	  you want to enable it, set the "debugging" variable to 
	  True in src/gpodder/libgpodder.py
	* Preparations for the 0.8.0 release (TODO list, etc..)

Fri, 14 Jul 2006 21:07:56 +0200 <thp@perli.net>
	* Multiple selection support for downladed items list
	* Bumped up version and release dates
	* Updated parts of README file for upcoming 0.8 release
	* Updated TODO list