@@ -1,8 +1,4 @@
 
-  == after 0.8.0 ==
-
- * set "debugging" variable to "True" again
- 
  * Although downloads worked, as shown by presence in channel directory
    on hard disk and by playing the pod with RealPlayer, the pods didn't
    always show up in the 'downloaded' tab. When the downloaded podcast
