@@ -61,7 +61,7 @@ from xml.sax import saxutils
 
 # global debugging variable, set to False on release
 # TODO: while developing a new version, set this to "True"
-debugging = False
+debugging = True
 
 # global recursive lock for thread exclusion
 globalLock = threading.RLock()
