@@ -1,3 +1,14 @@
+Sun, 30 Jul 2006 15:11:51 +0200 <thp@perli.net>
+	* Added new makefile target "cl" to automatically generate a 
+          new changelog entry with right formatting
+        * Housekeeping for going svn again (version. debugging variable)
+
+Fri, 28 Jul 2006 14:34:37 +0200 <thp@perli.net>
+	* ** gPodder version 0.8.0 is here! **
+	* Thanks to all the contributors that helped make this release
+	  possible, especially thanks to the gpodder-devel list users
+	* Updated README, TODO, ...
+
 Sun, 23 Jul 2006 23:57:25 +0200 <thp@perli.net>
 	* Patched data/gpodder.glade with patch from Alain Tauch
 	* Added French comment to data/gpodder.desktop
@@ -88,7 +99,7 @@ Fri, 09 Jun 2006 12:37:54 +0200 <thp@perli.net>
 
 Thu, 08 Jun 2006 23:58:49 +0200 <thp@perli.net>
 	* Fixed a bug where a "&" character in the channels list would 
-	  result in gPodder to crash - thanks to Gaim Roitgrund for 
+	  result in gPodder to crash - thanks to Haim Roitgrund for 
 	  pointint out that error and providing a nice bug report!
 	* Pushed version and release date
 
